@@ -1,3 +1,15 @@
+
+VERSION "4.3.83"  September 8 2014
+fix del signe \0376  and added file name to midi file in -midi
+fix ^ ornament after e
+
+VERSION "4.3.82"   April 28 2014
+try and handle the funny quotes an dashes that Apple Mac TextEdit puts into a file
+without asking.
+
+VERSION "4.3.81"   April 18 2014
+added some padding for the x prefix ornament in pass1.cc
+
 VERSION "4.3.80"  Nov 20 2013
 declared main as int for apple's new compiler
 other changes to avoid apple compiler warnings
